# reporium-system-design

./: .gitignore  CHANGELOG.md  COMPANY_KB_REUSE_PLAN.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: security.yml  test.yml
docs/: 01-platform-overview.md  02-decision-log.md  03-cap-theorem.md  04-scale-analysis.md  05-tradeoffs.md  06-working-with-engineers.md  07-diagrams.md  08-demo-guide.md  09-navigating-ambiguity.md  10-append-only-embeddings.md  11-atomic-graph-rebuild.md  12-ingest-runs-provenance.md  13-tag-canonicalization.md  14-repo-dependencies-as-depends-on.md  15-phase-2-3-followups.md  16-mcp-http-bridge-and-workato-auth.md
docs/archive/: 16-mcp-http-bridge-and-workato-auth.md
tests/: test_docs.py
